# lbl-frj-tracker

./: .gitignore  README.md  clients.py  config.py  data.py  frj_bot.py  mailer.py  pyproject.toml  report.py  requirements.txt
.github/workflows/: daily_report.yml
